// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepNumber is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiStepNumber testClass1 testClass2 emotion-euiStepNumber-s-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Step 
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  />
</span>
`;

exports[`EuiStepNumber props status complete is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-complete"
>
  <span
    class="euiStepNumber__icon emotion-euiStepNumber__icon-complete"
    data-euiicon-type="check"
  >
    Step 1 is complete
  </span>
</span>
`;

exports[`EuiStepNumber props status current is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-current"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Current step is 1
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status danger is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-danger"
>
  <span
    class="euiStepNumber__icon emotion-euiStepNumber__icon-danger"
    data-euiicon-type="cross"
  >
    Step 1 has errors
  </span>
</span>
`;

exports[`EuiStepNumber props status disabled is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-disabled"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Step 1 is disabled
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status incomplete is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-incomplete"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Step 1 is incomplete
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`EuiStepNumber props status loading is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-loading"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Step 1 is loading
  </span>
  <span
    aria-label="Loading"
    class="euiLoadingSpinner euiStepNumber__loader emotion-euiLoadingSpinner-xl"
    role="progressbar"
  />
</span>
`;

exports[`EuiStepNumber props status warning is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-s-warning"
>
  <span
    class="euiStepNumber__icon emotion-euiStepNumber__icon"
    data-euiicon-type="warning"
  >
    Step 1 has warnings
  </span>
</span>
`;

exports[`EuiStepNumber props titleSize is rendered 1`] = `
<span
  class="euiStepNumber emotion-euiStepNumber-xs"
>
  <span
    class="emotion-euiScreenReaderOnly"
  >
    Step 1
  </span>
  <span
    aria-hidden="true"
    class="euiStepNumber__number"
  >
    1
  </span>
</span>
`;
